--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 js-sys = "0.3"
-wasm-bindgen = "0.2"
+wasm-bindgen = {version = "0.2", features = ["nightly"]}
 
 [dependencies.web-sys]
 version = "0.3"
