add server, client crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,2 @@
-[package]
-name = "wasmtest"
-version = "0.1.0"
-authors = ["OwenFeik <owenhfeik@gmail.com>"]
-edition = "2018"
-
-[lib]
-crate-type = ["cdylib"]
-
-[dependencies]
-js-sys = "0.3"
-wasm-bindgen = {version = "0.2", features = ["nightly"]}
-
-[dependencies.web-sys]
-version = "0.3"
-features = [
-    'Blob',
-    'CssStyleDeclaration',
-    'Document',
-    'Element',
-    'File',
-    'FileList',
-    'FileReader',
-    'HtmlCanvasElement',
-    'HtmlElement',
-    'HtmlImageElement',
-    'HtmlInputElement',
-    'InputEvent',
-    'MouseEvent',
-    'ProgressEvent',
-    'Url',
-    'WebGlBuffer',
-    'WebGlProgram',
-    'WebGl2RenderingContext',
-    'WebGlShader',
-    'WebGlTexture',
-    'WebGlUniformLocation',
-    'Window',
-]
+[workspace]
+members = ["client", "server"]
