start working on server

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,5 +5,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+anyhow = "1"
+serde = "1"
+serde_derive = "1"
+sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "sqlite"]}
+tokio = {version = "1", features = ["full"]}
 warp = "0.3"
