handle zooming properly

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -18,6 +18,7 @@ features = [
     'CssStyleDeclaration',
     'Document',
     'Element',
+    'Event',
     'File',
     'FileList',
     'FileReader',
