--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+scene = {path = "../scene"}
 anyhow = "1"
 bytes = "1"
 futures = {version = "0.3", default-features = false}
