--- a/scene/Cargo.toml
+++ b/scene/Cargo.toml
@@ -3,3 +3,7 @@ name = "scene"
 authors = ["OwenFeik <owenhfeik@gmail.com>"]
 version = "0.1.0"
 edition = "2021"
+
+[dependencies]
+serde = "1"
+serde_derive = "1"
