--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 scene = {path = "../scene"}
 anyhow = "1"
+bincode = "1.3"
 bytes = "1"
 futures = {version = "0.3", default-features = false}
 ring = "0.16"
