--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 scene = { path = "../scene" }
 bincode = "1.3"
 js-sys = "0.3"
+parking_lot = "0.12"
 wasm-bindgen = {version = "0.2", features = ["nightly"]}
 
 [dependencies.web-sys]
