--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,12 +5,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-scene = {path = "../scene"}
 anyhow = "1"
+base64 = "0.13" 
 bincode = "1.3"
 bytes = "1"
 futures = {version = "0.3", default-features = false}
 ring = "0.16"
+scene = {path = "../scene"}
 serde = "1"
 serde_derive = "1"
 sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "sqlite"]}
