--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 scene = { path = "../scene" }
+base64 = "0.13"
 bincode = "1.3"
 js-sys = "0.3"
 parking_lot = "0.12"
