--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,7 +13,9 @@ base64 = "0.13"
 bincode = "1.3"
 js-sys = "0.3"
 parking_lot = "0.12"
-wasm-bindgen = {version = "0.2", features = ["nightly"]}
+serde = "1"
+serde_derive = "1"
+wasm-bindgen = {version = "0.2", features = ["nightly", "serde-serialize"]}
 
 [dependencies.web-sys]
 version = "0.3"
