move more build files to build dir

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "rust-analyzer.checkOnSave.extraArgs": ["--target-dir", "build/target"]
+    "rust-analyzer.server.extraEnv": {
+        "CARGO_TARGET_DIR": "build/target"
+    }
 }
