--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,6 +15,7 @@ js-sys = "0.3"
 parking_lot = "0.12"
 serde = "1"
 serde_derive = "1"
+serde_json = "1"
 wasm-bindgen = {version = "0.2", features = ["nightly", "serde-serialize"]}
 
 [dependencies.web-sys]
