--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 scene = { path = "../scene" }
 base64 = "0.13"
 bincode = "1.3"
+console_error_panic_hook = "0.1.7"
 js-sys = "0.3"
 parking_lot = "0.12"
 serde = "1"
