--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "rust-analyzer.server.extraEnv": {
         "CARGO_TARGET_DIR": "build/target"
+    },
+    "[html]": {
+        "editor.tabSize": 2
     }
 }
