--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "[html]": {
         "editor.formatOnSave": false,
         "editor.tabSize": 2,
-    }
+    },
+    "python.formatting.provider": "black"
 }
