--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4"
+actix-files = "0.6"
 anyhow = "1"
 base64 = "0.13" 
 bincode = "1.3"
