--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ base64 = "0.13"
 bincode = "1.3"
 bytes = "1"
 futures = {version = "0.3", default-features = false}
+once_cell = "1"
 ring = "0.16"
 scene = {path = "../scene"}
 serde = "1"
