--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,16 +5,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+scene = {path = "../scene"}
 actix-web = "4"
 actix-files = "0.6"
+actix-multipart = "0.6"
 anyhow = "1"
 base64 = "0.13" 
 bincode = "1.3"
 bytes = "1"
 futures = {version = "0.3", default-features = false}
+mime = "0.3"
 once_cell = "1"
 ring = "0.16"
-scene = {path = "../scene"}
 serde = "1"
 serde_derive = "1"
 sqlx = {version = "0.6", features = ["runtime-tokio-rustls", "sqlite"]}
