--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 scene = {path = "../scene"}
 actix-web = "4"
+actix-web-actors = "4"
 actix-files = "0.6"
 actix-multipart = "0.6"
 anyhow = "1"
