--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 scene = {path = "../scene"}
+actix = "0.13"
 actix-web = "4"
 actix-web-actors = "4"
 actix-files = "0.6"
