--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2021"
 
 [dependencies]
 scene = {path = "../scene"}
-actix = "0.13"
 actix-web = "4"
-actix-web-actors = "4"
+actix-ws = "0.2.5"
 actix-files = "0.6"
 actix-multipart = "0.6"
 anyhow = "1"
