--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1"
 base64 = "0.13" 
 bincode = "1.3"
 bytes = "1"
+env_logger = "0.10"
 futures = {version = "0.3", default-features = false}
 mime = "0.3"
 once_cell = "1"
