--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "editor.formatOnSave": false,
         "editor.tabSize": 2,
     },
+    "[javascript]": {
+        "editor.formatOnSave": false,
+    },
     "python.formatting.provider": "black"
 }
