--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,7 +21,8 @@ once_cell = "1"
 ring = "0.16"
 serde = "1"
 serde_derive = "1"
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
+uuid = { version = "1.11.0", features = ["serde"] }
 warp = "0.3.3"
