--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,5 +24,5 @@ serde_derive = "1"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
-uuid = { version = "1.11.0", features = ["serde"] }
+uuid = { version = "1.11.0", features = ["serde", "v7"] }
 warp = "0.3.3"
