--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
     "[javascript]": {
         "editor.formatOnSave": false,
     },
-    "python.formatting.provider": "black"
+    "python.formatting.provider": "black",
+    "nixEnvSelector.nixFile": "${workspaceRoot}/shell.nix"
 }
