--- a/scene/Cargo.toml
+++ b/scene/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 bincode = "1.3"
 serde = "1"
 serde_derive = "1"
-uuid = "1.11.0"
+uuid = { version = "1.11.0", features = ["serde"] }
