reworking scene editor to project model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "rust-analyzer.server.extraEnv": {
         "CARGO_TARGET_DIR": "build/target",
-        "DATABASE_URL": "sqlite://build/database.db"
+        "DATABASE_URL": "sqlite://./build/database.db"
     },
     "rust-analyzer.check.command": "clippy",
     "[rust]": {
