--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,8 +13,7 @@ base64 = "0.13"
 bincode = "1.3"
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3"
-serde = "1"
-serde_derive = "1"
+serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 uuid = { version = "1.11.0", features = ["serde", "v7", "js"] }
 wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"] }
