--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -16,7 +16,7 @@ js-sys = "0.3"
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
 uuid = { version = "1.11.0", features = ["serde", "v7", "js"] }
-wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"] }
+wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
 
 [dependencies.web-sys]
 version = "0.3"
